--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ThreeJourney</title>
+    <title>前端学习之路</title>
+    <link href="//lc-one.cn/icon.png?v=1" rel="icon" sizes="16x16" >
 </head>
 <body>
     <div id="root"></div>
